Registration pages now work, but VERY limited.
- Added @page directive to top of every page.
- Used dependency injection to add logging to every page.
- Moved code from OdysseyRepository file to BasePageModel.
- Commented out Controller code that seems unnecessary.
- Added an Id column to the Config DB table in code, may still need to do this to the prod DB.
- Fixed link from web site Index page to the correct link for Judges Registration Page01.
- Converted to @* *@ comment notation.
- Converted tabs to spaces.

--- a/OdysseyRegistration/OdysseyCoreMvc/Pages/CoachesTrainingRegistration/Page02.cshtml
+++ b/OdysseyRegistration/OdysseyCoreMvc/Pages/CoachesTrainingRegistration/Page02.cshtml
@@ -1,12 +1,14 @@
-﻿@{
-    // Package:	Odyssey of the Mind Web Site
-    // Module:	Coaches Training Registration
-    // File:	Page02.cshtml
-    // Author:	Robert Bernstein
-    // Version:	3.0
-    // Created:	10/30/2010: v2.0 Built in ASP.NET MVC 1.0 (based on ASP.NET 3.5 code from last year)
-    // Updated:	09/22/2013: v3.0 Rebuilt in ASP.NET MVC 4
-}
+﻿@page
+
+@*
+    Package: Odyssey of the Mind Web Site
+    Module:  Coaches Training Registration
+    File:    Page02.cshtml
+    Author:  Robert Bernstein
+    Version: 3.0
+    Created: 10/30/2010: v2.0 Built in ASP.NET MVC 1.0 (based on ASP.NET 3.5 code from last year)
+    Updated: 09/22/2013: v3.0 Rebuilt in ASP.NET MVC 4
+*@
 
 @model Page02Model
 
