--- a/OdysseyRegistration/OdysseyCoreMvc/Pages/JudgesRegistration/Page03.cshtml
+++ b/OdysseyRegistration/OdysseyCoreMvc/Pages/JudgesRegistration/Page03.cshtml
@@ -1,15 +1,17 @@
-﻿@{
-    // Package:	Odyssey of the Mind Web Site
-    // Module:	Judges Registration
-    // File:	Page03.cshtml
-    // Author:	Robert Bernstein
-    // Version:	3.0
-    // Created:	before 08/04/2007
-    // Updated:	09/29/2007: Replaced PHP database query code with MDB2
-    //			11/29/2009: Rebuilt in ASP.NET 3.5
-    //          10/24/2010: v2.0 Built in ASP.NET MVC 1.0 (based on ASP.NET 3.5 code from last year)
-    //          10/31/2013: v3.0 Rebuilt in ASP.NET MVC 4
-}
+﻿@page
+
+@*
+    Package: Odyssey of the Mind Web Site
+    Module:  Judges Registration
+    File:    Page03.cshtml
+    Author:  Robert Bernstein
+    Version: 3.0
+    Created: before 08/04/2007
+    Updated: 09/29/2007: Replaced PHP database query code with MDB2
+             11/29/2009: Rebuilt in ASP.NET 3.5
+             10/24/2010: v2.0 Built in ASP.NET MVC 1.0 (based on ASP.NET 3.5 code from last year)
+             10/31/2013: v3.0 Rebuilt in ASP.NET MVC 4
+*@
 
 @model Page03Model
 
