--- a/OdysseyRegistration/OdysseyCoreMvc/Pages/TournamentRegistration/Page02.cshtml
+++ b/OdysseyRegistration/OdysseyCoreMvc/Pages/TournamentRegistration/Page02.cshtml
@@ -1,14 +1,16 @@
-@{
-    // Package:	Odyssey of the Mind Web Site
-    // Module:	Tournament Registration
-    // File:	TournamentRegistration/Page02.aspx
-    // Author:	Robert Bernstein
-    // Version:	2.0
-    // Created:	before 08/04/2007: v1.0: Classic ASP
-    // Updated:	09/29/2007: v2.0: Replaced PHP database query code with MDB2
-    //			12/22/2009: v3.0: Rebuilt in ASP.NET 3.5
-    //			01/01/2010: v3.1: Rebuilt in ASP.NET MVC 1.0
-}
+@page
+
+@*
+    Package: Odyssey of the Mind Web Site
+    Module:  Tournament Registration
+    File:    TournamentRegistration/Page02.aspx
+    Author:  Robert Bernstein
+    Version: 2.0
+    Created: before 08/04/2007: v1.0: Classic ASP
+    Updated: 09/29/2007: v2.0: Replaced PHP database query code with MDB2
+             12/22/2009: v3.0: Rebuilt in ASP.NET 3.5
+             01/01/2010: v3.1: Rebuilt in ASP.NET MVC 1.0
+*@
 
 @model Page02Model
 
