--- a/OdysseyRegistration/OdysseyCoreMvc/Pages/VolunteerRegistration/Page02.cshtml
+++ b/OdysseyRegistration/OdysseyCoreMvc/Pages/VolunteerRegistration/Page02.cshtml
@@ -1,14 +1,16 @@
-﻿@{
-    // Package:	Odyssey of the Mind Web Site
-    // Module:	Volunteer Registration
-    // File:	Page02.cshtml
-    // Author:	Robert Bernstein
-    // Version:	3.0
-    // Created:	10/24/2010: Built in ASP.NET MVC 1.0 (based on ASP.NET 3.5 code from last year)
-    //          11/27/2012: Added Volunteer Registration.
-    //          12/01/2012: Added 3rd Page to Volunteer Registration.
-    // Updated:	11/10/2013: v3.0 Rebuilt in ASP.NET MVC 4
-}
+﻿@page
+
+@*
+    Package: Odyssey of the Mind Web Site
+    Module:  Volunteer Registration
+    File:    Page02.cshtml
+    Author:  Robert Bernstein
+    Version: 3.0
+    Created: 10/24/2010: Built in ASP.NET MVC 1.0 (based on ASP.NET 3.5 code from last year)
+             11/27/2012: Added Volunteer Registration.
+             12/01/2012: Added 3rd Page to Volunteer Registration.
+    Updated: 11/10/2013: v3.0 Rebuilt in ASP.NET MVC 4
+*@
 
 @model Page02Model
 
