--- a/OdysseyRegistration/OdysseyCoreMvc/Pages/VolunteerRegistration/Page03.cshtml
+++ b/OdysseyRegistration/OdysseyCoreMvc/Pages/VolunteerRegistration/Page03.cshtml
@@ -1,13 +1,15 @@
-﻿@{
-    // Package:	Odyssey of the Mind Web Site
-    // Module:	Volunteer Registration
-    // File:	Page03.aspx
-    // Author:	Robert Bernstein
-    // Version:	3.0
-    // Created:	10/30/2010: Built in ASP.NET MVC 1.0 (based on ASP.NET 3.5 code from last year)
-    //          11/27/2012: Added Volunteer Registration
-    // Updated:	11/10/2013: v3.0 Rebuilt in ASP.NET MVC 4
-}
+﻿@page
+
+@*
+    Package: Odyssey of the Mind Web Site
+    Module:  Volunteer Registration
+    File:    Page03.aspx
+    Author:  Robert Bernstein
+    Version: 3.0
+    Created: 10/30/2010: Built in ASP.NET MVC 1.0 (based on ASP.NET 3.5 code from last year)
+             11/27/2012: Added Volunteer Registration
+    Updated: 11/10/2013: v3.0 Rebuilt in ASP.NET MVC 4
+*@
 
 @model Page03Model
 
