--- a/OdysseyRegistration/OdysseyCoreMvc/Pages/CoachesTrainingRegistration/Page01.cshtml
+++ b/OdysseyRegistration/OdysseyCoreMvc/Pages/CoachesTrainingRegistration/Page01.cshtml
@@ -1,12 +1,14 @@
-﻿@{
-    // Package:	Odyssey of the Mind Web Site
-    // Module:	Coaches Training Registration
-    // File:	Page01.cshtml
-    // Author:	Robert Bernstein
-    // Version:	3.0
-    // Created:	10/24/2010: v2.0 Built in ASP.NET MVC 1.0 (based on ASP.NET 3.5 code from last year)
-    // Updated:	09/18/2013: v3.0 Rebuilt in ASP.NET MVC 4
-}
+﻿@page
+
+@*
+    Package: Odyssey of the Mind Web Site
+    Module:  Coaches Training Registration
+    File:    Page01.cshtml
+    Author:  Robert Bernstein
+    Version: 3.0
+    Created: 10/24/2010: v2.0 Built in ASP.NET MVC 1.0 (based on ASP.NET 3.5 code from last year)
+    Updated: 09/18/2013: v3.0 Rebuilt in ASP.NET MVC 4
+*@
 
 @model Page01Model
 
