--- a/OdysseyRegistration/OdysseyCoreMvc/Pages/JudgesRegistration/Page01.cshtml
+++ b/OdysseyRegistration/OdysseyCoreMvc/Pages/JudgesRegistration/Page01.cshtml
@@ -1,14 +1,14 @@
 ﻿@page
 
-@{
-    // Package:	Odyssey of the Mind Web Site
-    // Module:	Judges Registration
-    // File:	Page01.cshtml
-    // Author:	Robert Bernstein
-    // Version:	3.0
-    // Created:	10/24/2010: v2.0 Built in ASP.NET MVC 1.0 (based on ASP.NET 3.5 code from last year)
-    // Updated:	10/27/2013: v3.0 Rebuilt in ASP.NET MVC 4
-}
+@*
+    Package: Odyssey of the Mind Web Site
+    Module:  Judges Registration
+    File:    Page01.cshtml
+    Author:  Robert Bernstein
+    Version: 3.0
+    Created: 10/24/2010: v2.0 Built in ASP.NET MVC 1.0 (based on ASP.NET 3.5 code from last year)
+    Updated: 10/27/2013: v3.0 Rebuilt in ASP.NET MVC 4
+*@
 
 @model Page01Model
 
@@ -139,7 +139,7 @@
 <hr />
 <form>
     <p>
-        <a asp-page="Page02">Begin the Registration Process >></a>
+        <a asp-page="/JudgesRegistration/Page02">Begin the Registration Process >></a>
         <a asp-page="@Model.Config["HomePage"]">Return to the Home Page</a>
     </p>
 </form>
