--- a/OdysseyRegistration/OdysseyCoreMvc/Pages/TournamentRegistration/Page09.cshtml
+++ b/OdysseyRegistration/OdysseyCoreMvc/Pages/TournamentRegistration/Page09.cshtml
@@ -1,14 +1,16 @@
-@{
-    // Package:	Odyssey of the Mind Web Site
-    // Module:	Tournament Registration
-    // File:	Page09.cshtml
-    // Author:	Robert Bernstein
-    // Created:	before 08/04/2007: v1.0: Classic ASP
-    // Updated:	11/04/2007: v2.0: Overhauled tournament registration; Replaced database query code with MDB2
-    //			12/27/2009: v3.0: Rebuilt in ASP.NET 3.5
-    //			01/01/2010: v3.1: Rebuilt in ASP.NET MVC 1.0
-    //			11/20/2013: v4.0: Rebuilt in ASP.NET MVC 4
-}
+@page
+
+@*
+    Package: Odyssey of the Mind Web Site
+    Module:  Tournament Registration
+    File:    Page09.cshtml
+    Author:  Robert Bernstein
+    Created: before 08/04/2007: v1.0: Classic ASP
+    Updated: 11/04/2007: v2.0: Overhauled tournament registration; Replaced database query code with MDB2
+             12/27/2009: v3.0: Rebuilt in ASP.NET 3.5
+             01/01/2010: v3.1: Rebuilt in ASP.NET MVC 1.0
+             11/20/2013: v4.0: Rebuilt in ASP.NET MVC 4
+*@
 
 @model Page09Model
 
