--- a/OdysseyRegistration/OdysseyCoreMvc/Pages/TournamentRegistration/ResendEmail.cshtml
+++ b/OdysseyRegistration/OdysseyCoreMvc/Pages/TournamentRegistration/ResendEmail.cshtml
@@ -1,3 +1,5 @@
+@page
+
 @*<%@ Page Title="" Language="C#" MasterPageFile="~/Views/Shared/Site.Master" Inherits="System.Web.Mvc.ViewPage<VaOdysseyMVC2.ViewData.TournamentRegistration.ResendEmailViewData>" %>
 
 <asp:Content ID="Content1" ContentPlaceHolderID="TitleContent" runat="server">
