--- a/OdysseyRegistration/OdysseyCoreMvc/Pages/Index.cshtml
+++ b/OdysseyRegistration/OdysseyCoreMvc/Pages/Index.cshtml
@@ -1,12 +1,42 @@
 ﻿@page
+
+@*
+    Package: Odyssey of the Mind Web Site
+    Module:  Coaches Training Registration
+    File:    Index.cshtml
+    Author:  Robert Bernstein
+    Version: 3.0
+    Created: 10/30/2010: v2.0 Built in ASP.NET MVC 1.0 (based on ASP.NET 3.5 code from last year)
+    Updated: 09/22/2013: v3.0 Rebuilt in ASP.NET MVC 4
+*@
+
 @model IndexModel
+
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Registration Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <p>Registration Home Page</p>
-    <a asp-page="/JudgesRegistration/Page01">Judges Registration</a>
+<h2>
+    @ViewData["Message"]
+</h2>
+
+<div>
+    <p>
+        Click on one of the links below to being the specified registration process.
+    </p>
+    <ul>
+        <li><a href="CoachesTrainingRegistration/Page01">Coaches Training Registration</a></li>
+        <li><a href="JudgesRegistration/Page01">Judges Registration</a></li>
+        <li>Judges Registration (Coming Soon!)</li>
+        @if (@Model.Config["WillHaveVolunteerRegistration"] == "True")
+        {
+            <li><a href="VolunteerRegistration/Page01">Volunteer Registration</a></li>
+            <li>Volunteer Registration (Coming Soon!)</li>
+        }
+        <li><a href="TournamentRegistration/Page01">Tournament Registration</a></li>
+        <li>Tournament Registration (Coming Soon!)</li>
+    </ul>
+    <p style="text-align: center">
+        <button type="button" id="homePageButton">Return to the Home Page</button>
+    </p>
 </div>
