--- a/OdysseyRegistration/OdysseyCoreMvc/Pages/Shared/_Layout.cshtml
+++ b/OdysseyRegistration/OdysseyCoreMvc/Pages/Shared/_Layout.cshtml
@@ -12,33 +12,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     @*
-        The Title property is set by each of the pages that will have their content embedded in the _Layout file.
+    The Title property is set by each of the pages that will have their content embedded in the _Layout file.
     *@
     <title>@ViewData["Title"] - Odyssey Registration</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/OdysseyRegistration.styles.css" asp-append-version="true" />
-    
+
     @* Determine which CSS to use based on the current URL. *@
-    @*<link href="@Model.PathToSiteCssFile" rel="stylesheet" />*@
+    <link rel="stylesheet" href="~/css/@Model.SiteCssFile" asp-append-version="true" />
 </head>
+
+<div class="page">
+    <div id="header">
+        <div id="title">
+            <h1>
+                @Model.SiteName: @Model.Config["RegionName"] Odyssey of the Mind
+            </h1>
+        </div>
+        <div id="logindisplay">
+            @*@Html.RenderPartial("LogOnUserControl");*@
+        </div>
+        <br />
+        <div id="menucontainer">
+            <ul id="menu">
+                <li><a href="@Model.Config["HomePage"]">Home</a></li>
+                @*<li>@Html.ActionLink("Administration", "Index", "Administration")</li>*@
+            </ul>
+        </div>
+    </div>
+    <div id="main">
+        @RenderBody()
+        <div id="footer">
+        </div>
+    </div>
+</div>
+
+@*
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 @*
-                    The following anchor element is a Tag Helper. In this case, it's the Anchor Tag Helper. The
-                    asp-page="/Movies/Index" Tag Helper attribute and value creates a link to the /Movies/Index Razor
-                    Page.
-                    https://docs.microsoft.com/en-us/aspnet/core/mvc/views/tag-helpers/intro?view=aspnetcore-6.0
-                    https://docs.microsoft.com/en-us/aspnet/core/mvc/views/tag-helpers/built-in/anchor-tag-helper?view=aspnetcore-6.0
-                    
-                    The asp-area attribute value is empty, so the area isn't used in the link. See Areas for more
-                    information.
-                    https://docs.microsoft.com/en-us/aspnet/core/mvc/controllers/areas?view=aspnetcore-6.0
+                The following anchor element is a Tag Helper. In this case, it's the Anchor Tag Helper. The
+                asp-page="/Movies/Index" Tag Helper attribute and value creates a link to the /Movies/Index Razor
+                Page.
+                https://docs.microsoft.com/en-us/aspnet/core/mvc/views/tag-helpers/intro?view=aspnetcore-6.0
+                https://docs.microsoft.com/en-us/aspnet/core/mvc/views/tag-helpers/built-in/anchor-tag-helper?view=aspnetcore-6.0
 
-                    TODO: Fix the links below for the Odyssey Registration website.
-                *@
+                The asp-area attribute value is empty, so the area isn't used in the link. See Areas for more
+                information.
+                https://docs.microsoft.com/en-us/aspnet/core/mvc/controllers/areas?view=aspnetcore-6.0
+
+                TODO: Fix the links below for the Odyssey Registration website.
+                
                 <a class="navbar-brand" asp-page="/Movies/Index">RPMovie</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -60,10 +87,10 @@
     <div class="container">
         <main role="main" class="pb-3">
             @*
-                RenderBody is a placeholder where all the page-specific views show up, wrapped in the layout page. For
-                example, select the Privacy link and the Pages/Privacy.cshtml view is rendered inside the RenderBody
-                method.
-            *@
+            RenderBody is a placeholder where all the page-specific views show up, wrapped in the layout page. For
+            example, select the Privacy link and the Pages/Privacy.cshtml view is rendered inside the RenderBody
+            method.
+            
             @RenderBody()
         </main>
     </div>
@@ -81,3 +108,4 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+*@
