--- a/OdysseyRegistration/OdysseyMvc2023/Views/Home/Index.cshtml
+++ b/OdysseyRegistration/OdysseyMvc2023/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     // Version:	3.0
     // Created:	10/30/2010: v2.0 Built in ASP.NET MVC 1.0 (based on ASP.NET 3.5 code from last year)
     // Updated:	09/22/2013: v3.0 Rebuilt in ASP.NET MVC 4
-    // Updated:	12/03/2023: v4.0 Rebuilt in ASP.NET MVC 4 from dotPeek reverse engineered code and files copied from novanorth.org.
+    //         	12/03/2023: v4.0 Rebuilt in ASP.NET MVC 4 from dotPeek reverse engineered code and files copied from novanorth.org.
 }
 
 @model OdysseyMvc2023.ViewData.BaseViewData
