--- a/OdysseyRegistration/OdysseyMvc2023/Views/Shared/_Layout.cshtml
+++ b/OdysseyRegistration/OdysseyMvc2023/Views/Shared/_Layout.cshtml
@@ -2,38 +2,54 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <meta name="viewport" content="width=device-width" />
+    <title>@ViewBag.Title</title>
+    <script src="@Url.Content("~/Scripts/jquery-3.4.1.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery-ui-1.10.3.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+    @*<script src="@Url.Content("~/Scripts/jquery.maskedinput-1.3.1.js")" type="text/javascript"></script>*@
+    <script src="@Url.Content("~/Scripts/jquery.inputmask/jquery.inputmask-2.4.1.min.js")" type="text/javascript"></script>
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/redmond/jquery-ui.css" />
+
+    @* Determine which CSS to use based on the current URL. *@
+    <link href="@Model.PathToSiteCssFile" rel="stylesheet" />
+
+    @*    <script>
+            // Add exists function for any object.
+            //jQuery.fn.exists = function () { return this.length > 0; }
+        </script>*@
+
+    @*    @Styles.Render("~/Content")
+        @Styles.Render("~/Content/css")
+        @Scripts.Render("~/bundles/modernizr")*@
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
-        <div class="container">
-            @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+    @*@Scripts.Render("~/bundles/jquery")*@
+    @RenderSection("scripts", false)
+    <div class="page">
+        <div id="header">
+            <div id="title">
+                <h1>
+                    @Model.SiteName: @Model.Config["RegionName"] Odyssey of the Mind
+                </h1>
+            </div>
+            <div id="logindisplay">
+                @*@Html.RenderPartial("LogOnUserControl");*@
+            </div>
+            <br />
+            <div id="menucontainer">
+                <ul id="menu">
+                    <li><a href="@Model.Config["HomePage"]">Home</a></li>
+                    @*<li>@Html.ActionLink("Administration", "Index", "Administration")</li>*@
                 </ul>
             </div>
         </div>
-    </nav>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+        <div id="main">
+            @RenderBody()
+            <div id="footer">
+            </div>
+        </div>
     </div>
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
 </body>
 </html>
