--- a/OdysseyRegistration/OdysseyMvc2023/Views/Home/Index.cshtml
+++ b/OdysseyRegistration/OdysseyMvc2023/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
 @model OdysseyMvc2023.ViewData.BaseViewData
 
 @{
-    ViewBag.Title = "Registration Home Page";
+    ViewBag.Title = "Odyssey Registration Home Page";
 }
 
 @{
@@ -45,15 +45,18 @@
         </p>
         <ul>
             @*<li>@Html.ActionLink("Coaches Training Registration", "Page01", "CoachesTrainingRegistration")</li>*@
-            @*            <li>@Html.ActionLink("Judges Registration", "Page01", "JudgesRegistration")</li>*@
-            <li>Judges Registration (Coming Soon!)</li>
+
+            @* TODO: Make Coming Soon dynamically displayable with DB config value. *@
+            <li>@Html.ActionLink("Judges Registration", "Page01", "JudgesRegistration")</li>
+            @*<li>Judges Registration (Coming Soon!)</li>*@
             @if (Model.Config["WillHaveVolunteerRegistration"] == "True")
             {
                 @*<li>@Html.ActionLink("Volunteer Registration", "Page01", "VolunteerRegistration")</li>*@
                 <li>Volunteer Registration (Coming Soon!)</li>
             }
-            @*<li>@Html.ActionLink("Tournament Registration", "Page01", "TournamentRegistration")</li>*@
-            <li>Tournament Registration (Coming Soon!)</li>
+            @* TODO: Make Coming Soon dynamically displayable with DB config value. *@
+            <li>@Html.ActionLink("Tournament Registration", "Page01", "TournamentRegistration")</li>
+            @*<li>Tournament Registration (Coming Soon!)</li>*@
         </ul>
         <p style="text-align: center">
             <button type="button" id="homePageButton">Return to the Home Page</button>
