--- a/OdysseyRegistration/OdysseyMvc2024/Views/Shared/_Layout.cshtml
+++ b/OdysseyRegistration/OdysseyMvc2024/Views/Shared/_Layout.cshtml
@@ -5,14 +5,11 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <script src="~/Scripts/jquery-3.7.1.min.js"></script>
-    @*    <script src="@Url.Content("~/Scripts/jquery-3.4.1.min.js")" type="text/javascript"></script>*@
-    <script src="~/Scripts/jquery-ui-1.13.2.min.js"></script>
-    @*<script src="@Url.Content("~/Scripts/jquery-ui-1.10.3.min.js")" type="text/javascript"></script>*@
     <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-    @*<script src="@Url.Content("~/Scripts/jquery.maskedinput-1.3.1.js")" type="text/javascript"></script>*@
+    <script src="~/Scripts/jquery-ui-1.13.2.min.js"></script>
     <script src="@Url.Content("~/Scripts/jquery.inputmask/jquery.inputmask-2.4.1.min.js")" type="text/javascript"></script>
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.13.2/themes/redmond/jquery-ui.css" />
+    <link href="http://code.jquery.com/ui/1.13.2/themes/redmond/jquery-ui.css" rel="stylesheet" />
 
     @* Determine which CSS to use based on the current URL. *@
     <link href="@Model.PathToSiteCssFile" rel="stylesheet" />
